# tinyrpc

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
baseproto/: CMakeLists.txt
cmake/: protobuf-generate.cmake
include/tinyrpc/: rpc_websocket_service.hpp
